--- a/about.html
+++ b/about.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="script.js"></script><!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Bootstrap Website Tutorial</title>
@@ -6,8 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <style>
     .mini{
@@ -88,12 +88,12 @@
 
 
 
-<footer class="container-fluid text-center">
+<footer class="container-footer text-center">
 <div class="row">
   <div class="col-sm-4">
     <h3>Contact Us</h3>
     <br>
-    <h4><a class="mail" href="mailto:joe@example.com?subject=feedback">Email me</a></h4>
+    <h4><a class="mail" href="mailto:joe@example.com?subject=feedback">w3corporation@outlook.com</a></h4>
   </div>
   <div class="col-sm-4">
     <h3>Connect</h3>
@@ -107,7 +107,14 @@
     <img src="img/bunny.png" class="icon">
   </div>
 </div>
+<div class="row">
+  <div class="col-xs-12">
+    <p class="myMark">Developed by Aleksandar Herman © <script>document.write(new Date().getFullYear())</script></p>
+  </div>
+</div>
 </footer>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
